@@ -21,6 +21,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -62,9 +63,11 @@ public class SecurityConfig {
                         .accessDeniedHandler(accessDeniedHandler)
                 )
                 .authorizeHttpRequests(auth -> auth
-                        // Public Auth Endpoints
+                        // 1. Allow all CORS preflight OPTIONS requests without authentication
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
+                        // 2. Public Authentication & Registration Endpoints
                         .requestMatchers("/api/v1/auth/**").permitAll()
-                        // Public Swagger UI & OpenAPI Specification
+                        // 3. Public Swagger UI & OpenAPI 3.0 Documentation
                         .requestMatchers(
                                 "/swagger-ui/**",
                                 "/swagger-ui.html",
@@ -73,9 +76,9 @@ public class SecurityConfig {
                                 "/swagger-resources/**",
                                 "/webjars/**"
                         ).permitAll()
-                        // Allow CORS Preflight requests
-                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        // All other endpoints require authentication
+                        // 4. Public Actuator Health Check (for frontend health polling)
+                        .requestMatchers("/actuator/health").permitAll()
+                        // 5. All other secure API endpoints require Bearer JWT authentication
                         .anyRequest().authenticated()
                 )
                 .authenticationProvider(authenticationProvider())
@@ -84,14 +87,52 @@ public class SecurityConfig {
         return http.build();
     }
 
+    /**
+     * Enterprise Cross-Origin Resource Sharing (CORS) Configuration
+     * Allows seamless frontend integration for React, Angular, Vue, Next.js, Flutter, and Mobile apps.
+     * Pre-configured for standard local dev ports (3000, 3001, 5173, 5174, 4200, 8081) and allows wildcard origin patterns.
+     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-        configuration.setExposedHeaders(List.of("Authorization"));
+        
+        // Allowed Origin Patterns (supports localhost with any port e.g. React 3000, Vite 5173, Next.js 3000, Angular 4200, capacitor/electron/mobile)
+        configuration.setAllowedOriginPatterns(Arrays.asList(
+                "http://localhost:[*]",
+                "http://127.0.0.1:[*]",
+                "http://10.0.2.2:[*]",      // Android Emulator host
+                "https://localhost:[*]",
+                "*"
+        ));
+        
+        // Allowed HTTP Methods for RESTful operations
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS", "HEAD"));
+        
+        // Allowed Request Headers
+        configuration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "X-Requested-With",
+                "Accept",
+                "Origin",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers",
+                "X-Custom-Header",
+                "Cache-Control"
+        ));
+        
+        // Exposed Headers so Axios/Fetch in React/Vue can read pagination, authorization tokens & content dispositions
+        configuration.setExposedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Disposition",
+                "X-Total-Count",
+                "Link"
+        ));
+        
+        // Allow cookies / credentials along with requests
         configuration.setAllowCredentials(true);
+        
+        // Cache preflight OPTIONS responses for 1 hour (3600 seconds) to minimize roundtrips
         configuration.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
